apps/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 80
